Added Swagger, and fixed connectionstring problem with Sqlite

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings" : {
-    "VyDbContextConnectionString": "Data Source=VyKundeserviceDatabase.db"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=VyKundeservice.db"
   },
   "AllowedHosts": "*"
 }
