Deleted Api csproject, and moved it to WebUI

--- a/WebUi/appsettings.json
+++ b/WebUi/appsettings.json
@@ -4,5 +4,8 @@
         "Default": "Warning"
       }
     },
-"AllowedHosts": "*"
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=VyKundeservice.db"
+    },
+  "AllowedHosts": "*"
 }
