--- a/WebUi/appsettings.json
+++ b/WebUi/appsettings.json
@@ -4,8 +4,9 @@
         "Default": "Warning"
       }
     },
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=VyKundeservice.db"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=VyKundeservice.db",
+    "SqlServerConnectionString": "Server=(localdb)\\mssqllocaldb;Database=VyKundeserviceDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
