Removed VyKundeservice project, and fixed TreeView in home controller

--- a/WebUi/ClientApp/src/tsconfig.app.json
+++ b/WebUi/ClientApp/src/tsconfig.app.json
@@ -4,6 +4,7 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
+  "types": ["jquery"], // add here
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
