--- a/WebUi/ClientApp/package.json
+++ b/WebUi/ClientApp/package.json
@@ -24,14 +24,16 @@
     "@angular/platform-server": "8.2.13",
     "@angular/router": "8.2.13",
     "@nguniversal/module-map-ngfactory-loader": "8.0.0-rc.1",
+    "@types/jquery": "^3.3.31",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "hammerjs": "^2.0.8",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.5.3",
+    "tether": "^1.4.7",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
