--- a/WebUi/WebUi.csproj
+++ b/WebUi/WebUi.csproj
@@ -36,6 +36,15 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20191114133959_NewDesign.cs" />
+    <Compile Remove="Migrations\20191114133959_NewDesign.Designer.cs" />
+    <Compile Remove="Migrations\20191114141746_DbModel.cs" />
+    <Compile Remove="Migrations\20191114141746_DbModel.Designer.cs" />
+    <Compile Remove="Migrations\20191114143737_AddedRelationsApi.cs" />
+    <Compile Remove="Migrations\20191114143737_AddedRelationsApi.Designer.cs" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
